[gd_scene load_steps=11 format=3 uid="uid://36gqo3gtnw8o"]

[ext_resource type="Script" path="res://player.gd" id="1_ru88g"]
[ext_resource type="Texture2D" uid="uid://b1fjxie0b6wv0" path="res://Assets/Rey-Sheet.png" id="2_c6bb0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1xmq"]
size = Vector2(16, 5.66277)

[sub_resource type="Animation" id="Animation_lkru3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ian2q"]
resource_name = "dash"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_0b1ql"]
resource_name = "fall"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_fombo"]
resource_name = "idle"
length = 0.95
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_5mk67"]
resource_name = "jump"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_afvo8"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1vku"]
_data = {
"RESET": SubResource("Animation_lkru3"),
"dash": SubResource("Animation_ian2q"),
"fall": SubResource("Animation_0b1ql"),
"idle": SubResource("Animation_fombo"),
"jump": SubResource("Animation_5mk67"),
"run": SubResource("Animation_afvo8")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ru88g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_c6bb0")
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5808)
scale = Vector2(0.425436, 2.26937)
shape = SubResource("RectangleShape2D_s1xmq")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_h1vku")
}

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="dash_again_timer" type="Timer" parent="."]

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
